<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView_photo"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:src="@drawable/ic_action_account_box" />

        <EditText
            android:id="@+id/editText_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText_telephone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:hint="@string/hint_telephone"
                android:inputType="phone" />

            <ImageView
                android:id="@+id/imageViewAddTelephone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:src="@drawable/ic_content_add" />

        </LinearLayout>

        <ListView
            android:id="@+id/listViewTelephones"
            android:layout_width="match_parent"
            android:layout_height="45dp">


        </ListView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/editText_email"
                android:layout_width="0dp"
                android:layout_weight="8"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textWebEmailAddress" />

            <ImageView
                android:src="@drawable/ic_content_add"
                android:id="@+id/imageViewAddEmail"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <ListView
            android:id="@+id/listViewEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <EditText
            android:id="@+id/editText_socialNetworking"
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_socialNetworking" />

        <ImageView
            android:id="@+id/imageViewAddSocialNetworking"
            android:src="@drawable/ic_content_add"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />

        </LinearLayout>

        <ListView
            android:id="@+id/listViewSocialNetworkig"
            android:layout_width="match_parent"
            android:layout_height="45dp">

        </ListView>

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/textViewAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_address"
            android:textSize="24sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/editText_zipCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:hint="@string/hint_zipCode"
                android:inputType="number" />

            <Button
                android:id="@+id/button_search"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/textButton_search" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/hint_type" />

            <EditText
                android:id="@+id/editText_street"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="12"
                android:hint="@string/hint_street" />

        </LinearLayout>


        <EditText
            android:id="@+id/editText_neighborhood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_neighborhood" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:hint="@string/hint_city" />

            <EditText
                android:id="@+id/edit_state"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/hint_state" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>