<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ListPeopleActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:background="#A3E0FF"
        >

        <TextView
            android:id="@+id/textViewFilter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/text_filter"
            android:gravity="center"/>

        <EditText
            android:id="@+id/editTextFilter"
            android:background="#A3E0FF"
            android:layout_width="0dp"
            android:layout_weight="9"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:gravity="center"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#C2EBFF">

        <TextView
            android:id="@+id/textView_id"
            android:text="@string/text_id"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            />

        <TextView
            android:layout_marginLeft="6dp"
            android:id="@+id/textView_name"
            android:text="@string/text_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8" />


    </LinearLayout>

    <ListView
        android:id="@+id/list_contacts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E0FFFF" />

</LinearLayout>
